--- a/Link List/Link_List.ipynb
+++ b/Link List/Link_List.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "052dc364",
    "metadata": {},
    "outputs": [
@@ -12,9 +12,8 @@
      "text": [
       "[2, 'data', 'hello']\n",
       "Length of list is 3\n",
-      "target not found\n",
-      "['data', 'hello']\n",
-      "Length of list is 2\n"
+      "[2, 'new data', 'data', 'hello']\n",
+      "Length of list is 4\n"
      ]
     }
    ],
@@ -36,9 +35,9 @@
     "        cur = self.head.next\n",
     "        while cur:\n",
     "            if cur.data == target:\n",
-    "                new = Node(data)\n",
-    "                new.next = cur.next\n",
-    "                cur.next = new\n",
+    "                new_node = Node(data)\n",
+    "                new_node.next = cur.next\n",
+    "                cur.next = new_node\n",
     "                return\n",
     "            cur = cur.next\n",
     "        print('target not found')\n",
@@ -76,7 +75,6 @@
     "link.add(\"hello\")\n",
     "link.display()\n",
     "link.length()\n",
-    "link.remove(2)\n",
     "link.add_after(2,'new data')\n",
     "link.display()\n",
     "link.length()"
