--- a/Link List/Link_List.ipynb
+++ b/Link List/Link_List.ipynb
@@ -2,22 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 145,
    "id": "052dc364",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 'data', 'hello']\n",
-      "Length of list is 3\n",
-      "[2, 'new data', 'data', 'hello']\n",
-      "Length of list is 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# single link list\n",
     "class Node:\n",
     "    def __init__(self, data=None):\n",
     "        self.data = data\n",
@@ -67,17 +57,7 @@
     "            cur=cur.next\n",
     "        print(elem)\n",
     "\n",
-    "\n",
-    "link = Link_list()\n",
-    "\n",
-    "link.add(2)\n",
-    "link.add('data')\n",
-    "link.add(\"hello\")\n",
-    "link.display()\n",
-    "link.length()\n",
-    "link.add_after(2,'new data')\n",
-    "link.display()\n",
-    "link.length()"
+    "\n"
    ]
   },
   {
@@ -86,7 +66,85 @@
    "id": "311c5a5b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#double link list\n",
+    "class DNode:\n",
+    "    def __init__(self,data=None):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "class DLink_list:\n",
+    "    def __init__(self):\n",
+    "        self.head = DNode()\n",
+    "    def add(self,data):\n",
+    "        new = DNode(data)\n",
+    "        cur = self.head\n",
+    "        while cur.next is not None:\n",
+    "            cur = cur.next\n",
+    "        cur.next = new\n",
+    "        new.prev = cur\n",
+    "    def remove(self,target):\n",
+    "        cur = self.head.next\n",
+    "        while cur:\n",
+    "            if cur.data == target:\n",
+    "                if cur.prev:\n",
+    "                    cur.prev.next = cur.next\n",
+    "                if cur.next:\n",
+    "                    cur.next.prev = cur.prev\n",
+    "                return\n",
+    "            cur = cur.next\n",
+    "\n",
+    "    def display(self):\n",
+    "        elem = []\n",
+    "        cur = self.head.next\n",
+    "        while cur:\n",
+    "            elem.append(cur.data)\n",
+    "            cur=cur.next\n",
+    "        print(elem)\n",
+    "\n",
+    "\n",
+    "\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "ea4d1a00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time for single linked list: 1.38347 seconds\n",
+      "Time for double linked list: 0.95854 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import timeit\n",
+    "\n",
+    "def main():\n",
+    "    link1 = Link_list()\n",
+    "    for i in range(1, 10000):\n",
+    "        link1.add(i)\n",
+    "    for i in range(1, 10000):\n",
+    "        link1.remove(i)\n",
+    "\n",
+    "def main2():\n",
+    "    link2 = DLink_list()\n",
+    "    for i in range(1, 10000):\n",
+    "        link2.add(i)\n",
+    "    for i in range(1, 10000):\n",
+    "        link2.remove(i)\n",
+    "\n",
+    "execution_time = timeit.timeit(main, number=1)\n",
+    "execution_time2 = timeit.timeit(main2, number=1)\n",
+    "\n",
+    "print(f'Time for single linked list: {execution_time:.5f} seconds')\n",
+    "print(f'Time for double linked list: {execution_time2:.5f} seconds')"
+   ]
   }
  ],
  "metadata": {
