--- a/Link_List.ipynb
+++ b/Link_List.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "052dc364",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "311c5a5b",
    "metadata": {},
    "outputs": [],
@@ -117,9 +117,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for single linked list: 0.00062 seconds\n",
-      "Time for double linked list: 0.00050 seconds\n",
-      "Time for array list: 0.00514 seconds\n"
+      "Time for single linked list: 0.00607 seconds\n",
+      "Time for double linked list: 0.00518 seconds\n",
+      "Time for array list: 0.56955 seconds\n"
      ]
     }
    ],
@@ -128,20 +128,20 @@
     "link1 = Link_list()\n",
     "link2 = DLink_list()\n",
     "array = []\n",
-    "for i in range(1, 10000):\n",
+    "for i in range(1, 100000):\n",
     "        array.append(i)\n",
     "        link1.add(i)\n",
     "        link2.add(i)\n",
     "def main():\n",
     "    link1 = Link_list()\n",
-    "    for i in range(1, 10000):\n",
+    "    for i in range(1, 100000):\n",
     "        link1.remove(i)\n",
     "def main2():\n",
     "    link2 = DLink_list()\n",
-    "    for i in range(1, 10000):\n",
+    "    for i in range(1, 100000):\n",
     "        link2.remove(i)\n",
     "def main3():\n",
-    "    for i in range(1, 10000):\n",
+    "    for i in range(1, 100000):\n",
     "        array.remove(i)\n",
     "execution_time = timeit.timeit(main, number=1)\n",
     "execution_time2 = timeit.timeit(main2, number=1)\n",
@@ -156,7 +156,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
