--- a/algorithm.ipynb
+++ b/algorithm.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "e884fbc6",
    "metadata": {},
    "outputs": [
@@ -151,11 +151,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.000027800\n"
+      "                             1\n",
+      "                          2  2\n",
+      "                       3  3  3\n",
+      "                    4  4  4  4\n",
+      "                 5  5  5  5  5\n",
+      "              6  6  6  6  6  6\n",
+      "           7  7  7  7  7  7  7\n",
+      "        8  8  8  8  8  8  8  8\n",
+      "     9  9  9  9  9  9  9  9  9\n",
+      " 10 10 10 10 10 10 10 10 10 10\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "\n",
+    "n = int(input())\n",
+    "wid = len(str(n)) + 1\n",
+    "for i in range(1,n+1):\n",
+    "    print(' '*(n-i)*wid,end='')\n",
+    "    for _ in range(i):\n",
+    "        print(f\"{i:{wid}}\",end='')\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
